feat: make company required with null validation and refactor status tests
- Lead: added null validation for company in compact constructor
- LeadService: replaced Collectors.toList() with .toList()
- LeadServiceTest: merged 3 duplicated status tests into @ParameterizedTest + @CsvSource
- LeadServiceTest: rewritten shouldCreateLeadWhenCompanyIsNull to expect exception
- create.jte: added 'required' attribute to company input
- StackComparisonTest: fixed html row count regex
- Fixed imports to comply with Google Style (no wildcards, correct order)